tests/NormalTests/paczka1/fuzzy1/18043393.err
Error in line 1: CmIKnzotLN S936 58,3
Error in line 6: S936 S936 1,2
Error in line 18: CKavLPK0 S810 86,0
Error in line 28: WlbUA S93: 85,1
Error in line 32: OtPdind S810 58,5
